frontend/src/sections/Navbar/Navbar.module.css
@import "../../styles/variables.css";

.navbar {
  background-color: var(--color-background-component);
  padding: var(--space-md) 0;
  color: var(--color-text-primary);
  box-shadow: var(--box-shadow-md);
  position: sticky;
  top: 0;
  z-index: 1000;
}

.container {
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 var(--space-md);
}

.brand {
  color: var(--color-primary);
  text-decoration: none;
  font-size: var(--fs-700);
  font-weight: bold;
}

.navList {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
}

.navItem {
  margin-left: var(--space-xl);
}

.navLink {
  color: var(--color-text-base);
  text-decoration: none;
  font-size: var(--fs-400);
  padding: var(--space-xs) 0;
  transition: var(--transition-base);
  position: relative;
}

.navLink::after {
  content: "";
  position: absolute;
  width: 0;
  height: 2px;
  bottom: -5px;
  left: 0;
  background-color: var(--color-primary);
  transition: width 0.3s ease-in-out;
}

.navLink:hover::after,
.navLink:focus::after {
  width: 100%;
}

.hamburger {
  display: none;
  flex-direction: column;
  justify-content: space-around;
  width: 2rem;
  height: 2rem;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  z-index: 10;
}

.hamburger:focus {
  outline: none;
}

.hamburger div {
  width: 2rem;
  height: 0.25rem;
  background: var(--color-primary);
  border-radius: 10px;
  transition: all 0.3s linear;
  position: relative;
  transform-origin: 1px;
}

.hamburger.open div:nth-child(1) {
  transform: rotate(45deg);
}

.hamburger.open div:nth-child(2) {
  opacity: 0;
  transform: translateX(20px);
}

.hamburger.open div:nth-child(3) {
  transform: rotate(-45deg);
}

@media (max-width: 768px) {
  .navList {
    display: flex;
    flex-direction: column;
    position: fixed;
    top: 0;
    right: -100%;
    width: 70%;
    height: 100vh;
    background-color: var(--color-background-component);
    justify-content: center;
    align-items: center;
    gap: var(--space-xl);
    transition: right 0.5s ease-in-out;
    box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
  }

  .navList.open {
    right: 0;
  }

  .navLink {
    font-size: var(--fs-600);
  }

  .hamburger {
    display: flex;
  }
}

